// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`details should build correct query with gauge 1`] = `
with gauge_ref as (
    select
        gauges_view.id,
        gauges_view.name
    from
        gauges_view
    where
        gauges_view.language = 'en'
    order by
        gauges_view.name asc,
        gauges_view.created_at asc,
        gauges_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(gauge_ref.*)
        from
            gauge_ref
        where
            gauge_ref.id = sections_view.gauge_id) as gauge
from
    sections_view
where
    sections_view.language = 'en'
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`details should build correct query with media 1`] = `
with media_connection as (
    select
        media_view.id,
        media_view.url
    from
        media_view
    where
        media_view.language = 'en'
    order by
        media_view.weight asc
)
select
    sections_view.id,
    sections_view.name, (with media_connection_internal as (
            select
                media_connection.*,
                COALESCE(count(media_connection.*)
                    OVER (),
                    0)
            from
                media_connection
            inner join sections_media on media_connection.id = sections_media.media_id
            where
                sections_media.section_id = sections_view.id
)
        select
            json_build_object('count', (
                    select
                        media_connection_internal.count from media_connection_internal
                    limit 1),
                'nodes', (
                    select
                        COALESCE(json_agg (media_connection_internal.*),
                            '[]'::json)
                    from
                        media_connection_internal))) as media
from
    sections_view
where
    sections_view.language = 'en'
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`details should build correct query with region 1`] = `
with region_ref as (
    select
        regions_view.id,
        regions_view.name
    from
        regions_view
    where
        regions_view.language = 'en'
    order by
        regions_view.name asc,
        regions_view.created_at asc,
        regions_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(region_ref.*)
        from
            region_ref
        inner join rivers on region_ref.id = rivers.region_id
        where
            rivers.id = sections_view.river_id) as region
from
    sections_view
where
    sections_view.language = 'en'
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`details should build correct query with river 1`] = `
with river_ref as (
    select
        rivers_view.id,
        rivers_view.name
    from
        rivers_view
    where
        rivers_view.language = 'en'
    order by
        rivers_view.name asc,
        rivers_view.created_at asc,
        rivers_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(river_ref.*)
        from
            river_ref
        where
            river_ref.id = sections_view.river_id) as river
from
    sections_view
where
    sections_view.language = 'en'
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`details should build correct query without connections 1`] = `
select
    sections_view.id,
    sections_view.name,
    sections_view.description,
    sections_view.premium,
    sections_view.river_id,
    sections_view.region_id,
    sections_view.demo,
    sections_view.season,
    sections_view.season_numeric,
    sections_view.levels,
    sections_view.flows,
    sections_view.flows_text,
    sections_view.put_in,
    sections_view.take_out,
    sections_view.shape,
    sections_view.distance,
    sections_view.drop,
    sections_view.duration,
    sections_view.difficulty,
    sections_view.difficulty_xtra,
    sections_view.rating,
    sections_view.tags,
    sections_view.created_at,
    sections_view.updated_at,
    sections_view.pois
from
    sections_view
where
    sections_view.language = 'en'
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`list should build correct query with gauge 1`] = `
with gauge_ref as (
    select
        gauges_view.id,
        gauges_view.name
    from
        gauges_view
    where
        gauges_view.language = 'en'
    order by
        gauges_view.name asc,
        gauges_view.created_at asc,
        gauges_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(gauge_ref.*)
        from
            gauge_ref
        where
            gauge_ref.id = sections_view.gauge_id) as gauge, count(sections_view.*)
OVER ()
from
    sections_view
where
    sections_view.language = 'en'
    and (sections_view.hidden = false
        or sections_view.region_id in (
            select
                regions_editors.region_id
            from
                regions_editors
            where
                regions_editors.user_id = '477a0bec-8a78-11e7-b3e6-9beeff45d731'))
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`list should build correct query with region 1`] = `
with region_ref as (
    select
        regions_view.id,
        regions_view.name
    from
        regions_view
    where
        regions_view.language = 'en'
    order by
        regions_view.name asc,
        regions_view.created_at asc,
        regions_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(region_ref.*)
        from
            region_ref
        inner join rivers on region_ref.id = rivers.region_id
        where
            rivers.id = sections_view.river_id) as region, count(sections_view.*)
OVER ()
from
    sections_view
where
    sections_view.language = 'en'
    and (sections_view.hidden = false
        or sections_view.region_id in (
            select
                regions_editors.region_id
            from
                regions_editors
            where
                regions_editors.user_id = '477a0bec-8a78-11e7-b3e6-9beeff45d731'))
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`list should build correct query with river 1`] = `
with river_ref as (
    select
        rivers_view.id,
        rivers_view.name
    from
        rivers_view
    where
        rivers_view.language = 'en'
    order by
        rivers_view.name asc,
        rivers_view.created_at asc,
        rivers_view.id asc
)
select
    sections_view.id,
    sections_view.name, (
        select
            to_json(river_ref.*)
        from
            river_ref
        where
            river_ref.id = sections_view.river_id) as river, count(sections_view.*)
OVER ()
from
    sections_view
where
    sections_view.language = 'en'
    and (sections_view.hidden = false
        or sections_view.region_id in (
            select
                regions_editors.region_id
            from
                regions_editors
            where
                regions_editors.user_id = '477a0bec-8a78-11e7-b3e6-9beeff45d731'))
order by
    sections_view.name asc,
    sections_view.created_at asc,
    sections_view.id asc

`;

exports[`list should build correct query without connections 1`] = `
select
    sections_view.id,
    sections_view.name,
    sections_view.description,
    sections_view.premium,
    sections_view.river_id,
    sections_view.region_id,
    sections_view.demo,
    sections_view.season,
    sections_view.season_numeric,
    sections_view.levels,
    sections_view.flows,
    sections_view.flows_text,
    sections_view.put_in,
    sections_view.take_out,
    sections_view.shape,
    sections_view.distance,
    sections_view.drop,
    sections_view.duration,
    sections_view.difficulty,
    sections_view.difficulty_xtra,
    sections_view.rating,
    sections_view.tags,
    sections_view.created_at,
    sections_view.updated_at,
    sections_view.pois,
    count(sections_view.*)
    OVER ()
from
    sections_view
where
    sections_view.language = 'en'
    and (sections_view.hidden = false
        or sections_view.region_id in (
            select
                regions_editors.region_id
            from
                regions_editors
            where
                regions_editors.user_id = '477a0bec-8a78-11e7-b3e6-9beeff45d731'))
    order by
        sections_view.name asc,
        sections_view.created_at asc,
        sections_view.id asc

`;
